--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,11 @@ body {
   position: fixed;
   right: 25px;
 }
+
+.fab-danger {
+  bottom: 25px;
+  font-size: 30px;
+  padding: 10px;
+  position: fixed;
+  left: 25px;
+}
